# dart-runner

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: tests.yml
data/output/VNM/era5/: VNM-2001-2019-era5.spei_corrected.gamma.nc  VNM-2001-2019-era5.spi_corrected.gamma.nc
tests/: test_spei.py
